Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,6 +10,4 @@ blocks:
       jobs:
         - name: 'Job #1'
           commands:
-            - >-
-              chmod +x gradlew - ./gradlew assembleDebug - ./gradlew test -
-              ./gradlew build
+            - ./gradlew test
