Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,5 +15,6 @@ blocks:
           commands:
             - checkout
             - cache restore
-            - bundle install --path vendor/bundle
+            - bundle config set path 'vendor/bundle
+            - bundle install
             - cache store
